--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.xr.arcore": "6.0.5",
     "com.unity.xr.arfoundation": "6.1.0",
